[gd_scene load_steps=8 format=3 uid="uid://drtg0c1p43psh"]

[ext_resource type="Script" path="res://cenas/Cena03_Hildegard.gd" id="1_6emr6"]
[ext_resource type="Texture2D" uid="uid://n31ee3805lok" path="res://assets/balao-fala.png" id="1_y8q71"]
[ext_resource type="FontFile" uid="uid://djy146x3wurjd" path="res://fonts/Minecraftia-Regular.ttf" id="3_7fnkw"]
[ext_resource type="Texture2D" uid="uid://iqr3ubduvqh7" path="res://assets/casa-hildegard.png" id="3_keyr8"]
[ext_resource type="Texture2D" uid="uid://dgih03cpi6rq8" path="res://assets/hildegard.png" id="3_lyrni"]
[ext_resource type="Texture2D" uid="uid://dox3rl6yvw1cx" path="res://assets/viajante.png" id="5_mv7wq"]
[ext_resource type="AudioStream" uid="uid://ccssau3bp3d82" path="res://assets/music/musica-medieval.mp3" id="6_1wxah"]

[node name="Cena03_Hildegard" type="Node2D"]
script = ExtResource("1_6emr6")

[node name="UIScript" type="CanvasLayer" parent="."]

[node name="BalaoFala" type="TextureRect" parent="UIScript"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -389.0
offset_top = -234.0
offset_right = 323.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_y8q71")

[node name="NomePersonagemLabel" type="Label" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 376.0
offset_top = -18.0
offset_right = 421.0
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("3_7fnkw")
horizontal_alignment = 1

[node name="TextoDialogoLabel" type="RichTextLabel" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 102.0
offset_top = 46.0
offset_right = 628.0
offset_bottom = 159.0
theme_override_fonts/normal_font = ExtResource("3_7fnkw")

[node name="AvancarButton" type="Button" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 574.0
offset_top = 191.0
offset_right = 645.0
offset_bottom = 222.0
text = "Avan√ßar"

[node name="CasaHidelgard" type="Sprite2D" parent="."]
position = Vector2(648, 228)
texture = ExtResource("3_keyr8")

[node name="HildegardSprite" type="Sprite2D" parent="."]
position = Vector2(877, 515)
scale = Vector2(0.752, 0.789333)
texture = ExtResource("3_lyrni")

[node name="ViajanteSprite" type="Sprite2D" parent="."]
position = Vector2(176, 536)
scale = Vector2(0.388898, 0.382688)
texture = ExtResource("5_mv7wq")

[node name="FadeEfeito" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1wxah")
autoplay = true
